# tijori

./: .gitignore  Dockerfile  README.md  Scryer Integration.md  cli.py  pyproject.toml
app/: config.py  crypto.py  main.py  requirements.txt  schemas.py  service.py
