[project]
name = "tijori"
version = "0.1.0"
description = "Standalone, local-first, secret management system designed for agentic workflows."
requires-python = ">=3.11"
dependencies = [
  "argon2-cffi>=23.1.0",
  "cryptography>=44.0.0",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.7.0",
  "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
